fixed layout issue

--- a/static/tailwind/tailwind.css
+++ b/static/tailwind/tailwind.css
@@ -2162,11 +2162,6 @@ img {
   background-color: rgba(120, 53, 15, var(--tw-bg-opacity));
 }
 
-.group:hover .group-hover\:bg-red-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(220, 38, 38, var(--tw-bg-opacity));
-}
-
 .hover\:bg-fuchsia-800:hover {
   --tw-bg-opacity: 1;
   background-color: rgba(134, 25, 143, var(--tw-bg-opacity));
